java: rename code package com.box.sdk -> dev.unofficialbox (D-188)
com.box.sdk is Box's official Java SDK package, so the generated code collided
with it on the classpath (and squatted a namespace we don't own). Rename the
root to dev.unofficialbox — the reverse-DNS of the owned unofficialbox.dev
domain, matching the Maven groupId (D-187), with no trailing product segment
(classes sit directly under it, the dev.failsafe shape).

Mechanical, ~147 refs: the 6 *_PKG consts (printer's single source), all
hardcoded FQNs across backend/contract/tests, the pom two-pass include/exclude
paths, and the hand-written runtime's package + file location
(.../com/box/sdk/runtime/Runtime.java -> .../dev/unofficialbox/runtime/Runtime.java).

Verified on the real toolchain: javac -Xlint:all -Werror over 900 files, the
FR-5.2 swap at the new package path, the behavioral HttpServer run, the
chunked-upload --enable-preview gate, and mvn package all pass; gantry-contract
java_stubs tests pass. fmt + clippy clean.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>